--- a/nn_scratch.ipynb
+++ b/nn_scratch.ipynb
@@ -253,22 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 5, 3, ..., 4, 2, 0], dtype=int64)"
+       "(41000,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y_train"
+    "Y_train.shape"
    ]
   },
   {
